--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -61,6 +61,9 @@
               <li>
                 <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
+              <li>
+                <a href="/health/sliding-health"><i class="fa fa-fw fa-tachometer"></i> BOA Health</a>
+              </li>
               {% block side_panel_plugins %}{% endblock %}
             </ul>
           </div>
