Change default view to be static

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -62,7 +62,7 @@
                 <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
               <li>
-                <a href="/health/sliding-health"><i class="fa fa-fw fa-tachometer"></i> BOA Health</a>
+                <a href="/health/health"><i class="fa fa-fw fa-tachometer"></i> BOA Health</a>
               </li>
               {% block side_panel_plugins %}{% endblock %}
             </ul>
