--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -62,7 +62,16 @@
                 <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
               <li>
-                <a href="/health/health"><i class="fa fa-fw fa-tachometer"></i> BOA Health</a>
+                <a href="#"><i class="fa fa-file-text-o fa-fw"></i> BOA Health<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                  <li>
+                    <a href="/health/health"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
+                  </li>
+                  <li>
+                    <a href="/health/health?template=alerts"><i class="fa fa-fw fa-tachometer"></i> Alerts</a>
+                  </li>
+                </ul>
+                <!-- /.nav-second-level -->
               </li>
               {% block side_panel_plugins %}{% endblock %}
             </ul>
