Clarify date format

--- a/src/vboa/templates/vboa/header.html
+++ b/src/vboa/templates/vboa/header.html
@@ -16,8 +16,8 @@
         <table align="left" class="table table-striped table-bordered table-hover table-static" id="header-table">
           <tr>
             <td></td>
-            <th>Period start</th>
-            <th>Period stop</th>
+            <th>Period start (UTC)</th>
+            <th>Period stop (UTC)</th>
           </tr>
           <tr>
             <th>Time information</th>
