--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -34,6 +34,8 @@
           </button>
           <a class="navbar-brand" href="/">VBOA 0.1.0</a>
         </div>
+        <div id="time-clock">
+        </div>
         <!-- /.navbar-header -->
         <!-- User menu -->
         <ul class="nav navbar-top-links navbar-right">
