Change the symbol for the alerts to be an exclamation triangle

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -70,7 +70,7 @@
                     <a href="/health/health"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
                   </li>
                   <li>
-                    <a href="/health/health?template=alerts"><i class="fa fa-fw fa-tachometer"></i> Alerts</a>
+                    <a href="/health/health?template=alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
                   </li>
                 </ul>
                 <!-- /.nav-second-level -->
