Replace - by _ in the addresses

--- a/src/vboa/templates/boa_health/boa_health_alerts_content.html
+++ b/src/vboa/templates/boa_health/boa_health_alerts_content.html
@@ -3,11 +3,11 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#associated-alerts" style="color:red">Associated alerts <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#associated-boa-health-alerts" style="color:red">Associated alerts <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <!-- /.panel-heading -->
-    <div class="panel-body panel-collapse collapse in" id="associated-alerts">
+    <div class="panel-body panel-collapse collapse in" id="associated-boa-health-alerts">
       <div>
         <h3 style="color:red"><u>Table of alerts</u></h3>
       </div>
@@ -18,7 +18,7 @@
       <br/>
       <br/>
 
-      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="imaging-details-table">
+      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="associated-boa-health-alerts-details-table">
         <thead>
           <tr>
             <th>Severity</th>
@@ -74,7 +74,7 @@
           <h3><u>Alerts data</u></h3>
         </div>
         <div>
-          <p id="no-alerts-data" style="text-indent: 1em">There are no alerts during the requested period.</p>
+          <p id="no-boa-health-alerts-data" style="text-indent: 1em">There are no alerts during the requested period.</p>
           <br/>
         </div>
       </div>
