--- a/src/vboa/templates/boa_health/boa_health_query.html
+++ b/src/vboa/templates/boa_health/boa_health_query.html
@@ -40,7 +40,7 @@
             </form>
           </div>
           <div class="tab-pane" id="health-sliding-window">          
-            <form role="form" method=post action="/health/sliding-health">            
+            <form role="form" method=post action="/health/sliding_health">            
               <div>
                 <!-- Default values message -->
                 <div class="row">
