Add ingestion control view

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -64,13 +64,28 @@
                 <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-file-text-o fa-fw"></i> BOA Health<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-heart-o fa-fw"></i> BOA Health<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
                     <a href="/health/health"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
                   </li>
                   <li>
                     <a href="/health/health?template=alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
+                  </li>
+                </ul>
+                <!-- /.nav-second-level -->
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Ingestion control<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                  <li>
+                    <a href="/ingestion_control/ingestion_control"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
+                  </li>
+                  <li>
+                    <a href="/ingestion_control/ingestion_control?template=errors"><i class="fa fa-fw fa-exclamation-circle"></i> Ingestion errors</a>
+                  </li>
+                  <li>
+                    <a href="/ingestion_control/ingestion_control?template=alerts"><i class="fa fa-fw fa-exclamation-triangle"></i> Alerts</a>
                   </li>
                 </ul>
                 <!-- /.nav-second-level -->
