--- a/src/vboa/templates/boa_health/boa_health_alerts_content.html
+++ b/src/vboa/templates/boa_health/boa_health_alerts_content.html
@@ -69,14 +69,14 @@
 <div class="row">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <div class="panel-body">
-        <div>
-          <h3><u>Alerts data</u></h3>
-        </div>
-        <div>
-          <p id="no-boa-health-alerts-data" style="text-indent: 1em">There are no alerts during the requested period.</p>
-          <br/>
-        </div>
+      <h3 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#boa-health-alerts">BOA health monitoring alerts <span class="fa fa-angle-double-down"></span></a>
+      </h3>
+    </div>
+    <div class="panel-body panel-collapse collapse" id="boa-health-alerts">
+      <div>
+        <p id="no-boa-health-alerts-data" style="text-indent: 1em">There are no alerts during the requested period.</p>
+        <br/>
       </div>
     </div>
   </div>
