Correct list attribute for the datalists

--- a/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
+++ b/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
@@ -7,7 +7,7 @@
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
                 <label id="dim-signatures-dim-signature-like-checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim_signature_like_dims" name="dim_signature_like" id="dim-signatures-dim-signature-like-text"/>
+                <input class="form-control" list="dim-signature-like-dims" name="dim_signature_like" id="dim-signatures-dim-signature-like-text"/>
                 <datalist id="dim-signature-like-dims">
                 </datalist>
               </div>
