--- a/src/vboa/templates/eboa_nav/query_explicit_references_content.html
+++ b/src/vboa/templates/eboa_nav/query_explicit_references_content.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12" id="nav-explicit_references">
+<div class="col-lg-12" id="nav-explicit-references">
   <div class="panel panel-default">
     <div class="panel-body">
       <div class="row">
@@ -8,8 +8,8 @@
             <div class="row">
               <div class="col-xs-3 query-ers">
                 <label id="explicit-refs-explicit-refs-like-checkbox">Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="er_like_ers" name="er_like" id="explicit-refs-explicit-refs-like-text"/>
-                <datalist id="er_like_ers">
+                <input class="form-control" list="er-like-ers" name="er_like" id="explicit-refs-explicit-refs-like-text"/>
+                <datalist id="er-like-ers">
                 </datalist>
               </div>
               <div class="col-xs-3 query-ers">
@@ -22,8 +22,8 @@
             <div class="row">
               <div class="col-xs-3 query-er-groups">
                 <label id="explicit-refs-groups-like-checkbox">Group like (<input type="checkbox" name="group_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="group_like_explicit_reference" name="group_like" id="explicit-refs-groups-like-text"/>
-                <datalist id="group_like_explicit_reference">
+                <input class="form-control" list="group-like-explicit-reference" name="group_like" id="explicit-refs-groups-like-text"/>
+                <datalist id="group-like-explicit-reference">
                 </datalist>
               </div>
               <div class="col-xs-3 query-er-groups">
@@ -36,8 +36,8 @@
             <div class="row query-sources">
               <div class="col-xs-3 query-source-names">
                 <label id="explicit-refs-sources-like-checkbox">Source like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input id="explicit-refs-sources-like-text" class="form-control" list="source_like_ers" name="source_like"/>
-                <datalist id="source_like_ers">
+                <input id="explicit-refs-sources-like-text" class="form-control" list="source-like-ers" name="source_like"/>
+                <datalist id="source-like-ers">
                 </datalist>
               </div>
               <div class="col-xs-3 query-source-names">
@@ -55,8 +55,8 @@
                   <div class="row">
                     <div class="col-xs-3 query-keys">
                       <label id="explicit-refs-keys-like-checkbox">Key like (<input type="checkbox" name="key_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                      <input id="explicit-refs-keys-like-text" class="form-control" list="key_like_events" name="key_like"/>
-                      <datalist id="key_like_events">
+                      <input id="explicit-refs-keys-like-text" class="form-control" list="key-like-events" name="key_like"/>
+                      <datalist id="key-like-events">
                       </datalist>
                     </div>
                     <div class="col-xs-3 query-keys">
@@ -70,14 +70,14 @@
                     <div class="row  query-gauges">
                       <div class="col-xs-3 query-gauge-names">
                         <label id="explicit-refs-gauge-names-like-checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                        <input id="explicit-refs-gauge-names-like-text" class="form-control" list="gauge_name_like_events" name="gauge_name_like"/>
-                        <datalist id="gauge_name_like_events">
+                        <input id="explicit-refs-gauge-names-like-text" class="form-control" list="gauge-name-like-events" name="gauge_name_like"/>
+                        <datalist id="gauge-name-like-events">
                         </datalist>
                       </div>
                       <div class="col-xs-3 query-gauge-systems">
                         <label id="explicit-refs-gauge-system-like-checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                        <input id="explicit-refs-gauge-system-like-text" class="form-control" list="gauge_system_like_events" name="gauge_system_like"/>
-                        <datalist id="gauge_system_like_events">
+                        <input id="explicit-refs-gauge-system-like-text" class="form-control" list="gauge-system-like-events" name="gauge_system_like"/>
+                        <datalist id="gauge-system-like-events">
                         </datalist>
                       </div>
                     </div>
@@ -166,14 +166,14 @@
                   <div class="row  query-annotation-cnfs">
                     <div class="col-xs-3 query-annotation-names">
                       <label id="explicit-refs-annotation-names-like-checkbox">Annotation name like (<input type="checkbox" name="annotation_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                      <input class="form-control" list="annotation_name_like_annotations" name="annotation_name_like" id="explicit-refs-annotation-names-like-text"/>
-                      <datalist id="annotation_name_like_annotations">
+                      <input class="form-control" list="annotation-name-like-annotations" name="annotation_name_like" id="explicit-refs-annotation-names-like-text"/>
+                      <datalist id="annotation-name-like-annotations">
                       </datalist>
                     </div>
                     <div class="col-xs-3 query-annotation-systems">
                       <label id="explicit-refs-annotation-system-like-checkbox">Annotation system like (<input type="checkbox" name="annotation_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                      <input class="form-control" list="annotation_system_like_annotations" name="annotation_system_like" id="explicit-refs-annotation-system-like-text"/>
-                      <datalist id="annotation_system_like_annotations">
+                      <input class="form-control" list="annotation-system-like-annotations" name="annotation_system_like" id="explicit-refs-annotation-system-like-text"/>
+                      <datalist id="annotation-system-like-annotations">
                       </datalist>
                     </div>
                   </div>
