--- a/src/vboa/templates/eboa_nav/query_gauges_content.html
+++ b/src/vboa/templates/eboa_nav/query_gauges_content.html
@@ -8,13 +8,13 @@
               <div class="row  query-gauges">
                 <div class="col-xs-3 query-gauge-names">
                   <label id="gauges-gauge-names-like-checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_name_like_gauges" name="gauge_name_like" id="gauges-gauge-names-like-text"/>
+                  <input class="form-control" list="gauge-name-like-gauges" name="gauge_name_like" id="gauges-gauge-names-like-text"/>
                   <datalist id="gauge-name-like-gauges">
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
                   <label id="gauges-gauge-system-like-checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_system_like_gauges" name="gauge_system_like" id="gauges-gauge-system-like-text"/>
+                  <input class="form-control" list="gauge-system-like-gauges" name="gauge_system_like" id="gauges-gauge-system-like-text"/>
                   <datalist id="gauge-system-like-gauges">
                   </datalist>
                 </div>
@@ -35,7 +35,7 @@
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
                 <label id="gauges-dim-signatures-like-checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like" id="gauges-dim-signatures-like-text"/>
+                <input class="form-control" list="dim-signature-like-sources" name="dim_signature_like" id="gauges-dim-signatures-like-text"/>
                 <datalist id="dim-signature-like-sources">
                 </datalist>
               </div>
