--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -7,7 +7,7 @@
             <div class="row query-sources">
               <div class="col-xs-3 query-source-names">
                 <label id="sources-source-names-like-checkbox">Name like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="source_like_sources" name="source_like" id="sources-source-names-like-text"/>
+                <input class="form-control" list="source-like-sources" name="source_like" id="sources-source-names-like-text"/>
                 <datalist id="source-like-sources">
                 </datalist>
               </div>
@@ -20,7 +20,7 @@
             <div class="row query-sources">
               <div class="col-xs-3 query-source-processors">
                 <label id="sources-processors-like-checkbox">Processor like (<input type="checkbox" name="processor_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="processor_like_sources" name="processor_like" id="sources-processors-like-text"/>
+                <input class="form-control" list="processor-like-sources" name="processor_like" id="sources-processors-like-text"/>
                 <datalist id="processor-like-sources">
                 </datalist>
               </div>
@@ -33,7 +33,7 @@
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
                 <label id="sources-dim-signatures-like-checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like" id="sources-dim-signatures-like-text"/>
+                <input class="form-control" list="dim-signature-like-sources" name="dim_signature_like" id="sources-dim-signatures-like-text"/>
                 <datalist id="dim-signature-like-sources">
                 </datalist>
               </div>
