--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -22,7 +22,7 @@
             <div class="row">
               <div class="col-xs-3 query-ers">
                 <label id="annotations-explicit-refs-like-checkbox">Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="er_like_annotations" name="er_like" id="annotations-explicit-refs-like-text"/>
+                <input class="form-control" list="er-like-annotations" name="er_like" id="annotations-explicit-refs-like-text"/>
                 <datalist id="er-like-annotations">
                 </datalist>
               </div>
@@ -36,13 +36,13 @@
             <div class="row  query-annotation-cnfs">
               <div class="col-xs-3 query-annotation-names">
                 <label id="annotations-annotation-names-like-checkbox">Annotation name like (<input type="checkbox" name="annotation_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="annotation_name_like_annotations" name="annotation_name_like" id="annotations-annotation-names-like-text"/>
+                <input class="form-control" list="annotation-name-like-annotations" name="annotation_name_like" id="annotations-annotation-names-like-text"/>
                 <datalist id="annotation-name-like-annotations">
                 </datalist>
               </div>
               <div class="col-xs-3 query-annotation-systems">
                 <label id="annotations-annotation-system-like-checkbox">Annotation system like (<input type="checkbox" name="annotation_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="annotation_system_like_annotations" name="annotation_system_like" id="annotations-annotation-system-like-text"/>
+                <input class="form-control" list="annotation-system-like-annotations" name="annotation_system_like" id="annotations-annotation-system-like-text"/>
                 <datalist id="annotation-system-like-annotations">
                 </datalist>
               </div>
