--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -8,7 +8,7 @@
             <div class="row query-sources">
               <div class="col-xs-3 query-source-names">
                 <label id="events-sources-like-checkbox">Source like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="source_like_events" name="source_like" id="events-sources-like-text"/>
+                <input class="form-control" list="source-like-events" name="source_like" id="events-sources-like-text"/>
                 <datalist id="source-like-events">
                 </datalist>
               </div>
@@ -22,7 +22,7 @@
             <div class="row">
               <div class="col-xs-3 query-ers">
                 <label id="events-explicit-refs-like-checkbox">Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="er_like_events" name="er_like" id="events-explicit-refs-like-text"/>
+                <input class="form-control" list="er-like-events" name="er_like" id="events-explicit-refs-like-text"/>
                 <datalist id="er-like-events">
                 </datalist>
               </div>
@@ -36,7 +36,7 @@
             <div class="row">
               <div class="col-xs-3 query-keys">
                 <label id="events-event-keys-like-checkbox">Key like (<input type="checkbox" name="key_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="key_like_events" name="key_like" id="events-event-keys-like-text"/>
+                <input class="form-control" list="key-like-events" name="key_like" id="events-event-keys-like-text"/>
                 <datalist id="key-like-events">
                 </datalist>
               </div>
@@ -51,13 +51,13 @@
               <div class="row  query-gauges">
                 <div class="col-xs-3 query-gauge-names">
                   <label id="events-gauge-names-like-checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_name_like_events" name="gauge_name_like" id="events-gauge-names-like-text"/>
+                  <input class="form-control" list="gauge-name-like-events" name="gauge_name_like" id="events-gauge-names-like-text"/>
                   <datalist id="gauge-name-like-events">
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
                   <label id="events-gauge-system-like-checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_system_like_events" name="gauge_system_like" id="events-gauge-system-like-text"/>
+                  <input class="form-control" list="gauge-system-like-events" name="gauge_system_like" id="events-gauge-system-like-text"/>
                   <datalist id="gauge-system-like-events">
                   </datalist>
                 </div>
