--- a/src/vboa/templates/ingestion_control/ingestion_control.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control.html
@@ -130,3 +130,16 @@
 </div>
 {% endif %}
 {% endblock %}
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript">
+  {% if sliding_window %}
+  var parameters = {
+  "window_delay": "{{ sliding_window['window_delay'] }}",
+  "window_size": "{{ sliding_window['window_size'] }}",
+  }
+  var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
+  vboa.update_view(parameters, repeat_cycle, "/ingestion_control/sliding_ingestion_control_parameters");
+  {% endif %}
+</script>
+{% endblock %}
