--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts.html
@@ -10,3 +10,17 @@
 {% set alerts = health_events_sorted|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
 {% include "ingestion_control/ingestion_control_alerts_content.html" %}
 {% endblock %}
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript">
+  {% if sliding_window %}
+  var parameters = {
+  "window_delay": "{{ sliding_window['window_delay'] }}",
+  "window_size": "{{ sliding_window['window_size'] }}",
+  "template": "alerts",
+  }
+  var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
+  vboa.update_view(parameters, repeat_cycle, "/ingestion_control/sliding_ingestion_control_parameters");
+  {% endif %}
+</script>
+{% endblock %}
