Correct option to add more filters for the ingestion time
Correct race conditions on click for tests

--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -73,6 +73,8 @@
                 </span>
               </div>
             </div>
+            <div id="more-ingestion-time-query-sources">
+            </div>
             <div class="row" id="sources-ingestion-duration-initial">
               {% include "eboa_nav/ingestion_duration.html" %}
               <div>
