Add units to the header for the sliding view

--- a/src/vboa/templates/ingestion_control/ingestion_control_query.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_query.html
@@ -52,21 +52,21 @@
                 <!-- Delay -->
                 <div class="row">
                   <div class="col-xs-3">
-                    <label>Window delay</label>
+                    <label>Window delay (days)</label>
                     <input type="text" class="form-control" name="ingestion_control_window_delay" id="ingestion-control-window-delay"/>
                   </div>
                 </div>
                 <!-- Duration -->
                 <div class="row">
                   <div class="col-xs-3">
-                    <label>Window size</label>
+                    <label>Window size (days)</label>
                     <input type="text" class="form-control" name="ingestion_control_window_size" id="ingestion-control-window-size"/>
                   </div>
                 </div>
-                <!-- Repeat cycle -->
+                <!-- Repeat cycle (minutes) -->
                 <div class="row">
                   <div class="col-xs-3">
-                    <label>Repeat cycle</label>
+                    <label>Repeat cycle (minutes)</label>
                     <input type="text" class="form-control" name="ingestion_control_repeat_cycle" id="ingestion-control-repeat-cycle"/>
                   </div>
                 </div>
