--- a/src/vboa/templates/boa_health/boa_health_query.html
+++ b/src/vboa/templates/boa_health/boa_health_query.html
@@ -52,21 +52,21 @@
                 <!-- Delay -->
                 <div class="row">
                   <div class="col-xs-3">
-                    <label>Window delay</label>
+                    <label>Window delay (days)</label>
                     <input type="text" class="form-control" name="health_window_delay" id="health-window-delay"/>
                   </div>
                 </div>
                 <!-- Duration -->
                 <div class="row">
                   <div class="col-xs-3">
-                    <label>Window size</label>
+                    <label>Window size (days)</label>
                     <input type="text" class="form-control" name="health_window_size" id="health-window-size"/>
                   </div>
                 </div>
-                <!-- Repeat cycle -->
+                <!-- Repeat cycle (minutes) -->
                 <div class="row">
                   <div class="col-xs-3">
-                    <label>Repeat cycle</label>
+                    <label>Repeat cycle (minutes)</label>
                     <input type="text" class="form-control" name="health_repeat_cycle" id="health-repeat-cycle"/>
                   </div>
                 </div>
