Add indicators for the system programs status
Add possibility of switching on and off system programs

Add possibility of displaying toast messages

--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -212,3 +212,44 @@ input[type="checkbox"]:disabled + .label-text:before{
 	75%{transform: scale(1.4);}
 	100%{transform: scale(1);}
 }
+
+/* lights */
+
+.circle {
+    width:12px;
+    height:12px;
+    border-radius:50px;
+    color:#fff;
+    display: inline-block;
+}
+
+.red-circle {
+    background: red;
+}
+
+.green-circle {
+    background: green;
+}
+
+.yellow-circle {
+    background: yellow;
+}
+
+.blue-circle {
+    background: blue;
+}
+
+/* Loader */
+.loader {
+  border: 1px solid #f3f3f3; /* Light grey */
+  border-top: 1px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
