--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -61,6 +61,18 @@
           <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
               <li>
+                <a href="#"><i class="fa fa-wrench fa-fw"></i> BOA management<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                  <li>
+                    <a href="#" onclick="vboa.request_switch_on_off_orc()"><i id="orc-indicator" class="circle red-circle"></i><span> Orchestrator</a>
+                  </li>
+                  <li>
+                    <a href="#" onclick="vboa.request_switch_on_off_cron()"><i id="cron-indicator" class="circle red-circle"></i><span> CRON</a>
+                  </li>
+                </ul>
+                <!-- /.nav-second-level -->
+              </li>
+              <li>
                 <a href="/eboa_nav"><i class="fa fa-table fa-fw"></i> EBOA navigation</a>
               </li>
               <li>
