--- a/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
+++ b/src/vboa/templates/eboa_nav/query_dim_signatures_content.html
@@ -17,6 +17,23 @@
                 </select>
               </div>
             </div>
+            <!-- Query restrictions -->
+            <div class="row" id="dim-signatures-query-restrictions">
+              <!-- Order by -->
+              <div class="col-xs-3">
+                  <label>Order by (<input type="checkbox" name="order_descending" checked><span class="label-text"><b>Descending)</b></span></label>
+                  <select style="width: 100%" name="order_by" id="dim-signatures-order-by">
+                    <option></option>
+                    <option>dim_signature</option>
+                    <option>dim_signature_uuid</option>
+                  </select>
+              </div>
+              <!-- Limit -->
+              <div class="col-xs-3">
+                <label>Limit</label>
+                <input type="text" class="form-control" style="width: 100%" name="limit" id="dim-signatures-limit" value="1000"/>
+              </div>
+            </div>
             <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="dim-signatures-submit-button">Query</button>
             </div>
