--- a/src/vboa/templates/eboa_nav/query_explicit_references_content.html
+++ b/src/vboa/templates/eboa_nav/query_explicit_references_content.html
@@ -242,6 +242,23 @@
             </div>
             <div id="more-ingestion-time-query-explicit-refs">
             </div>
+            <!-- Query restrictions -->
+            <div class="row" id="explicit-refs-query-restrictions">
+              <!-- Order by -->
+              <div class="col-xs-3">
+                  <label>Order by (<input type="checkbox" name="order_descending" checked><span class="label-text"><b>Descending)</b></span></label>
+                  <select style="width: 100%" name="order_by" id="explicit-refs-order-by">
+                    <option></option>
+                    <option>explicit_ref</option>
+                    <option>ingestion_time</option>
+                  </select>
+              </div>
+              <!-- Limit -->
+              <div class="col-xs-3">
+                <label>Limit</label>
+                <input type="text" class="form-control" style="width: 100%" name="limit" id="explicit-refs-limit" value="1000"/>
+              </div>
+            </div>
             <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="explicit-refs-submit-button">Query</button>
             </div>
