--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -5,6 +5,40 @@
 <div>
   <a href="/eboa_nav/query-events"><p class="fa fa-chevron-left"> Back to query events</p></a>
 </div>
+{% if filters["limit"] != "" and filters["limit"]|int == events|length %}
+<div class="panel panel-yellow">
+  <div class="panel-heading">
+    The number of requested elements is higher than the limit of the query, you can navigate through all the list using the following links:
+  </div>
+  {% if filters["offset"]|int == 0 %}
+  {% set filters_to_forward = filters.copy() %}
+  {% do filters_to_forward.__setitem__("offset", filters_to_forward["offset"]|int + filters_to_forward["limit"]|int) %}
+  <p>{{ filters_to_forward|tojson }}</p>
+  <div class="panel-body" style="text-align:center">
+    <a href="#" onclick='vboa.request_info_json("/eboa_nav/query-events-pages", vboa.render_page, {{ filters_to_forward|tojson }})'>Next >></a>
+  </div>
+  {% else %}
+  <div class="panel-body" style="text-align:center">
+    {% set filters_to_forward_prev = filters.copy() %}
+    {% set filters_to_forward_next = filters.copy() %}
+    {% do filters_to_forward_prev.__setitem__("offset", filters_to_forward_prev["offset"]|int - filters_to_forward_prev["limit"]|int) %}
+    {% do filters_to_forward_next.__setitem__("offset", filters_to_forward_next["offset"]|int + filters_to_forward_next["limit"]|int) %}
+    <a href="#" onclick='vboa.request_info_json("/eboa_nav/query-events-pages", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a><p style="display: inline"> | </p><a href="#" onclick='vboa.request_info_json("/eboa_nav/query-events-pages", vboa.render_page, {{ filters_to_forward_next|tojson }})'>Next >></a>
+  </div>
+  {% endif %}
+</div>
+{% elif filters["offset"]|int > 0 and events|length < filters["limit"]|int %}
+<div class="panel panel-yellow">
+  <div class="panel-heading">
+    All the elements have been reviewed, you can go to the previous pages:
+  </div>
+  <div class="panel-body" style="text-align:center">
+    {% set filters_to_forward_prev = filters.copy() %}
+    {% do filters_to_forward_prev.__setitem__("offset", filters_to_forward_prev["offset"]|int - filters_to_forward_prev["limit"]|int) %}
+    <a href="#" onclick='vboa.request_info_json("/eboa_nav/query-events-pages", vboa.render_page, {{ filters_to_forward_prev|tojson }})'><< Prev</a>
+  </div>
+</div>
+{% endif %}
 <div class="panel panel-default">
   <div class="panel-heading">
     Table of events
